<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <RelativeLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/big_stone">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/back_btn_24"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/selectedTopicName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:text="@string/selected_topic_name"
            android:textSize="18sp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/timer_24"/>

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:59"
                android:layout_marginEnd="15dp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/line1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:elevation="1dp"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="1/10"
        android:textColor="@color/big_stone"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionNumber"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_light_big_stone_20"
        android:gravity="center"
        android:minHeight="70dp"
        android:padding="20dp"
        android:text="@string/question_will_be_here"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/question"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_30"
        android:text="Option 1"
        android:textColor="@color/big_stone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_below="@id/option1"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_30"
        android:text="Option 2"
        android:textColor="@color/big_stone"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_below="@id/option2"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_30"
        android:text="Option 3"
        android:textColor="@color/big_stone"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option4"
        android:layout_width="match_parent"
        android:layout_below="@id/option3"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_30"
        android:text="Option 4"
        android:textColor="@color/big_stone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/round_back_big_stone_30"
        android:fontFamily="@font/catamaran_light"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</RelativeLayout>